syntax = "proto3";

option go_package = "storage";
option java_package = "io.stackrox.proto.storage";

import "google/protobuf/timestamp.proto";
import "storage/network_flow.proto";
import "gogoproto/gogo.proto";

package storage;

// NetworkBaselineConnectionProperties represents information about a baseline connection
// next available tag: 4
message NetworkBaselineConnectionProperties {
    // Whether this connection is an ingress/egress, from the PoV
    // of the deployment whose baseline this is in
    bool ingress        = 1;

    // May be 0 if not applicable (e.g., icmp), and denotes the destination port
    uint32 port         = 2;
    L4Protocol protocol = 3;
}

// NetworkBaselinePeer represents a baseline peer.
// next available tag: 3
message NetworkBaselinePeer {
    NetworkEntity entity                                    = 1;

    // Will always have at least one element
    repeated NetworkBaselineConnectionProperties properties = 2;
}

// NetworkBaseline represents a network baseline of a deployment. It contains all
// the baseline peers and their respective connections.
// next available tag: 8
message NetworkBaseline {
    // This is the ID of the baseline.
    string deployment_id                             = 1 [(gogoproto.moretags) = 'sql:"pk"'];

    string cluster_id                                = 2;
    string namespace                                 = 3;

    repeated NetworkBaselinePeer peers               = 4;

    // A list of peers that will never be added to the baseline.
    // For now, this contains peers that the user has manually removed.
    // This is used to ensure we don't add it back in the event
    // we see the flow again.
    repeated NetworkBaselinePeer forbidden_peers     = 5;

    google.protobuf.Timestamp observation_period_end = 6;

    // Indicates if this baseline has been locked by user.
    // Here locking means:
    //   1: Do not let system automatically add any allowed peer to baseline
    //   2: Start reporting violations on flows that are not in the baseline
    bool locked                                      = 7;

    string deployment_name                           = 8;
}
